Tue Nov 12 09:16:24 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master b9213d7.  Changes include:

	  Fixed tests on Windows (I hope) by forcing platform for
	  platform-dependent tests.

	  Fixed File.exists? warnings.

	  Improved testing infrastructure.

	* test/rubygems:  ditto.

	* test/rdoc/test_rdoc_rubygems_hook.rb:  Switch to util_spec like
	  RubyGems.

Mon Nov 11 18:31:12 2013  Aman Gupta <ruby@tmm1.net>

	* internal.h: move common string/hash flags to include file.
	* ext/objspace/objspace_dump.c: remove flags shared above.
	* hash.c: ditto.
	* string.c: ditto.

Mon Nov 11 04:36:14 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Include 2.2.0.preview.2 when checking
	  if extensions should be built.  Fixes a ruby-ci failure.
	* test/rubygems/test_gem_specification.rb:  Test for the above.

Mon Nov 11 03:15:56 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c (symbol2event_flag): add secret feature.
	  add a_call/a_return events.
	  a_call is call | b_call | c_call, and same as a_return.

Mon Nov 11 02:51:17 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems: Update to RubyGems master 4bdc4f2.  Important changes
	  in this commit:

	  RubyGems now chooses the test server port reliably.  Patch by akr.

	  Partial implementation of bundler's Gemfile format.

	  Refactorings to improve the new resolver.

	  Fixes bugs in the resolver.

	* test/rubygems:  Tests for the above.

Mon Nov 11 01:02:06 2013  Zachary Scott  <e@zzak.io>

	* lib/timeout.rb: [DOC] Add note about change from #8730 [Fixes GH-440]
	* NEWS: [DOC] Improve grammar on change to Timeout
	  Patched by @srawlins in https://github.com/ruby/ruby/pull/440

Sun Nov 10 23:47:05 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* gc.c (rb_gcdebug_print_obj_condition): catch up recent changes
	  to compile on GC_DEBUG.

Sun Nov 10 22:16:19 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
