@@ -1,3 +1,7 @@
+Tue Nov 12 10:15:14 2013  Eric Hodel  <drbrain@segment7.net>
+
+	* test/rubygems/insure_session.rb:  Remove unused test file.
+
 Tue Nov 12 09:16:24 2013  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems:  Update to RubyGems master b9213d7.  Changes include:
